# siphon

./: LICENSE  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: CD.yml  CI.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  github.rs  installer.rs  lib.rs  logger.rs  main.rs  state.rs
src-tauri/src/downloader/: commands.rs  install.rs  mod.rs  models.rs  runner.rs
src-tauri/src/ffmpeg/: commands.rs  mod.rs  version_store.rs
src-tauri/src/utils/: mod.rs  net.rs  paths.rs
src/lib/: index.ts  state.svelte.ts
src/lib/components/: ChromeButton.svelte  ComboBox.svelte  DefaultButton.svelte  FormLabel.svelte  LargeButton.svelte  Notification.svelte  Setting.svelte  SiphonProgress.svelte  SiphonTooltip.svelte  Status.svelte  TextInput.svelte  ToolbarButton.svelte
src/lib/menu/: Chrome.svelte  FirstTimePopup.svelte  MenuBar.svelte  Notifications.svelte  ProgressPopup.svelte  SettingsMenuBar.svelte
src/lib/utils/: index.ts  notifications.ts  progress.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +layout.svelte  +page.svelte
src/routes/settings/ffmpeg/: +page.svelte
