[package]
name = "siphon"
version = "0.1.1"
description = "Siphon yt-dlp wrapper"
authors = ["Jack Whatley"]
edition = "2021"

[profile.release]
strip = true # Remove Debug Symbols
lto = true # Enable Link to Optimisations
panic = "abort"
codegen-units = 1
opt-level = "s"

[profile.dev.package.sqlx-macros]
opt-level = 3

[lib]
name = "siphon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"

eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"

dirs-next = "2.0"
bytes = "1.10"
sevenz-rust = "0.6.1"
tauri-plugin-dialog = "2"
async-trait = "0.1.88"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
